# fluent4rs

./: .gitignore  Cargo.toml  README.md  cobertura.xml  out.txt
.cargo/: config.toml
.github/workflows/: acceptance.yml  ci.yml  commit.yml  publish.yml  publish_crates_io.yml  publish_github_pages.yml  release.yml
.zed/: settings.json
benches/: parser_bench.rs
doc/: fluent_ebnf.puml  fluent_relationships.dot
docs/: README.md
docs/api/: help.html  search-index.js  settings.html  src-files.js
docs/api/fluent4rs/: all.html  index.html  sidebar-items.js
docs/coverage/: index.html
docs/doc/: crates.js  help.html  settings.html  src-files.js
docs/doc/fluent4rs/: all.html  index.html  sidebar-items.js
docs/doc/search.index/: 013fa8d14ab2.js  03ca2dc52686.js  03e14454d9a2.js  0421777f7e8e.js  05425d74fb84.js  0586c5a23119.js  0707b58929fb.js  078653317b79.js  07887ea9a223.js  0888b6a10c31.js  09078f2f58b1.js  09bdfa5ad413.js  0a74b9dceab4.js  0aaa9c2248d7.js  0b05507ade21.js  0b3dc640e767.js  0b52d0c7849c.js  0c319b6e8b19.js  0cc1e84ed26f.js  0e3110e36669.js  0e601de6ec81.js  0e6e6df4a64f.js  108cedb40f3a.js  10e051bd686f.js  1124e5f4d5b6.js  137d5ed38d5c.js  1472d92d9b9b.js  155c59e7e4c9.js  (+76 more)
src/: error.rs  grammar.rs  lib.rs  parser.rs  walker.rs
src/ast/: argument.rs  attribute.rs  attribute_accessor.rs  block_placeable.rs  block_text.rs  call_arguments.rs  comment_line.rs  default_variant.rs  entry.rs  function_reference.rs  identifier.rs  inline_expression.rs  inline_placeable.rs  inline_text.rs  junk.rs  literal.rs  message.rs  message_reference.rs  mod.rs  named_argument.rs  number_literal.rs  pattern.rs  pattern_element.rs  resource.rs  select_expression.rs  string_literal.rs  term.rs  term_reference.rs  variable_reference.rs  variant.rs  variant_key.rs  variant_list.rs
src/grammar/: chumsky.rs  pom.rs
tests/: ast_spec.rs  full_grammar_example.ftl  grammar_spec.rs  one_off.ftl  public_fields_spec.rs  resource_spec.rs
tests/data/: full_grammar_example.ftl  identifier_names.ftl
(+489 files in other folders)
