[package]
name = "fluent4rs"
version = "0.1.9"
edition = "2021"

[dependencies]
pom = { version = "3.4", features = ["trace"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
pretty_assertions = "1.4"

[features]
default = []
hash = []
serde = ["dep:serde"]
